apps/todo/manifests/deployment-app.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "todo-app"
  namespace: "project"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "todo-app"
  template:
    metadata:
      labels:
        app: "todo-app"
    spec:
      securityContext:
        fsGroup: 10001
      volumes:
        - name: "shared-data"
          persistentVolumeClaim:
            claimName: "shared-data"
      containers:
        - name: "todo-app"
          image: "registry:5111/todo-app"
          volumeMounts:
            - name: "shared-data"
              mountPath: "/app/static/images"
