apps/todo/manifests/deployment-backend.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "todo-backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "todo-backend"
  template:
    metadata:
      labels:
        app: "todo-backend"
    spec:
      containers:
        - name: "todo-backend"
          image: "registry:5111/todo-backend"
