apps/todo/manifests/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "todo-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "todo-app"
  template:
    metadata:
      labels:
        app: "todo-app"
    spec:
      containers:
        - name: "todo-app"
          image: "registry:5111/todo-app"
