apps/todo/manifests/service-backend.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "todo-backend"
spec:
  type: "NodePort"
  selector:
    app: "todo-backend"
  ports:
    - name: "http"
      nodePort: 30081
      protocol: "TCP"
      port: 1245
      targetPort: 8080
