apps/todo/manifests/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "todo"
  namespace: "project"
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "todo-app"
                port:
                  number: 1235
          - path: "/todos"
            pathType: "Prefix"
            backend:
              service:
                name: "todo-backend"
                port:
                  number: 1245
